--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
     </head>
     <body>
 
-        <p> Hehe, my first webpage!</p>
+        <div>
+            <p>Henlo <em>fremds</em></p>
+            <a href = "https://github.com/SukritSethi"> Me! </a> <!--Thats just my github :)-->
+            <p> Hehe, my first <strong>webpage!</strong></p>
+        </div>
+    <hr>
+        <h1>B R U H</h1>
+    <ul>
+        <li>yo</li>
+        <li>wassup</li>
+        <li>heyy</li>
+    </ul>
+
+    <span> This is a span tag :) </span>
+
+    <img src= "download (2).jfif" alt="Amogus" > 
 
     </body>
 </html>
