pseudo classes and elements

--- a/MarioClub/index.html
+++ b/MarioClub/index.html
@@ -50,7 +50,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Dolorum doloremque natus     </p>
                 <form>
-                    <input type="email" mane="email" placeholder="Type email pls :))" required>
+                    <input type="email" name="email" placeholder="Type email pls :))" required>
                 </form>
             </section>
             <footer>
@@ -59,4 +59,4 @@
         </section>
     </body>
 </html>
->>>>>>> f6a7a4e21f0d24bd953db8f83c3620e95f13f476
+
