--- a/MarioClub/index.html
+++ b/MarioClub/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <title>MarioClub</title>
     </head>
@@ -50,7 +51,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Dolorum doloremque natus     </p>
                 <form>
-                    <input type="email" name="email" placeholder="Type email pls :))" required>
+                    <input type="email" nam e="email" placeholder="Type email pls :))" required>
                 </form>
             </section>
             <footer>
