--- a/5_Bootstrap/tutorial.html
+++ b/5_Bootstrap/tutorial.html
@@ -13,11 +13,10 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Bootstrap</title>
   </head>
-
   <body>
-    NavBar
+    <!-- Navigation bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">iCoder</a>
@@ -49,19 +48,23 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Topics
+                Actions
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">Technology</a></li>
-                <li><a class="dropdown-item" href="#">WebDevelopment</a></li>
+                <li><a class="dropdown-item" href="#">Blockchain</a></li>
+                <li><a class="dropdown-item" href="#">Environment</a></li>
+
+                <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Support</a>
-                  <a class="dropdown-item" href="#">Write for us :)</a>
+                  <a class="dropdown-item" href="#">Fin-Tech</a>
                 </li>
               </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                >Pata Nahi <span class="badge bg-success">Success</span></a
+              >
             </li>
           </ul>
           <form class="d-flex">
@@ -79,9 +82,10 @@
       </div>
     </nav>
 
-    <!-- Alert -->
+    <!--Alert-->
     <div class="alert alert-success alert-dismissible fade show" role="alert">
-      <strong>Holy guacamole!</strong> Your form was submitted successfully!!
+      <strong>Holy guacamole!</strong> You should check in on some of those
+      fields below.
       <button
         type="button"
         class="btn-close"
@@ -90,32 +94,53 @@
       ></button>
     </div>
 
-    <!-- Breadcrumb -->
+    <!--Breadcrumb-->
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Blog</a></li>
-        <li class="breadcrumb-item"><a href="#">Tutorial</a></li>
-        <li class="breadcrumb-item active" aria-current="page">
-          Bootstrap blog
-        </li>
+        <li class="breadcrumb-item"><a href="#"> Home</a></li>
+        <li class="breadcrumb-item"><a href="#">Library</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Data</li>
       </ol>
     </nav>
+
+    <!--Button-->
+    <button type="button" class="btn btn-outline-secondary">Secondary</button>
+    <button type="button" class="btn btn-outline-success">Success</button>
     <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Button -->
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-outline-success">success</button>
-
-    <!-- Card -->
+    <br>
+    <br>
+    <!--Card-->
     <div class="card" style="width: 18rem;">
-        <img src="https://source.unsplash.com/1600x900/?nature,water" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+      <img src="imgs/road-g4194e52fc_1920.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+
+    <!--Carousel-->
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="imgs/mountains-g390b91888_1920.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="imgs/road-g20c8ac01b_1280.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="imgs/tree-g01b6953d0_1280.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
-
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
